--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "@metamask/detect-provider": "^2.0.0"
   }
 }
