--- a/apps/e2e/project.json
+++ b/apps/e2e/project.json
@@ -4,7 +4,7 @@
   "projectType": "application",
   "sourceRoot": "e2e/src",
   "tags": [],
-  "implicitDependencies": ["myreactapp"],
+  "implicitDependencies": ["react-app"],
   "// targets": "to see all targets run: nx show project e2e --web",
   "targets": {}
 }
