--- a/package.json
+++ b/package.json
@@ -24,24 +24,6 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "@types/chai": "^4.2.0",
-    "@types/mocha": ">=9.1.0",
-    "@types/node": ">=18.0.0",
-    "chai": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.4.0",
-    "hardhat": "^2.22.2",
-    "hardhat-gas-reporter": "^2.1.1",
-    "html-webpack-plugin": "^5.6.0",
-    "solidity-coverage": "^0.8.0",
-    "ts-loader": "^9.5.1",
-    "ts-node": ">=8.0.0",
-    "typechain": "^8.3.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
     "@nx/cypress": "18.3.0",
     "@nx/eslint": "18.3.0",
     "@nx/eslint-plugin": "18.3.0",
@@ -49,12 +31,18 @@
     "@nx/react": "18.3.0",
     "@nx/vite": "18.3.0",
     "@nx/web": "18.3.0",
+    "@nx/webpack": "^18.3.3",
     "@nx/workspace": "18.3.0",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": ">=18.0.0",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
@@ -63,7 +51,9 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
+    "chai": "^4.2.0",
     "cypress": "^13.6.6",
+    "dotenv": "^16.4.5",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
@@ -71,14 +61,25 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.22.2",
+    "hardhat-gas-reporter": "^2.1.1",
+    "html-webpack-plugin": "^5.6.0",
     "jsdom": "~22.1.0",
     "nx": "18.3.0",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "solidity-coverage": "^0.8.0",
     "tailwindcss": "3.2.7",
+    "ts-loader": "^9.5.1",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
