--- a/apps/ethereum-backend/project.json
+++ b/apps/ethereum-backend/project.json
@@ -3,5 +3,13 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "",
-  "targets": {}
+  "targets": {
+    "compile": {
+      "executor": "nx:run-script",
+      "options": {
+        "script": "compile-nx-target-script"
+      }
+
+    }
+  }
 }
