--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   "scripts": {
     "compile": "yarn nx run ethereum-backend:compile",
     "compile-nx-target-script": "yarn hardhat compile --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "test": "yarn hardhat test",
-    "test:gas-report": "export REPORT_GAS=true && yarn hardhat test",
-    "test-file": "yarn hardhat test --grep Hero",
+    "test": "yarn nx run ethereum-backend:test",
+    "test-nx-target-script": "yarn hardhat test --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "test-with-gas-report": "yarn nx run ethereum-backend:test-with-gas-report",
+    "test:gas-report-nx-target-script": "export REPORT_GAS=true && yarn hardhat test --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "start-local-network-nx-target-script": "yarn hardhat node --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "hardhat:node": "yarn nx run ethereum-backend:hardhat:node",
+    
+    "test-file": "yarn hardhat test --grep Hero --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
     "dev": "yarn webpack-dev-server",
-    "start": "nx serve",
-    "build": "nx build",
+    "start:react": "nx serve",
+    "build:react": "nx build",
     "test:react": "nx test",
-    "nx-dev:vanilla": "nx run vanilla-js-app:serve:webpack",
-    "nx-dev:react": "nx run react-app:serve"
+    "dev:vanilla": "nx run vanilla-js-app:serve:webpack",
+    "dev:react": "nx run react-app:serve"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
