--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
   "author": "mydatahack <thon6thon6@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "compile": "yarn hardhat compile",
-    "test": "yarn hardhat test",
-    "test:gas-report": "export REPORT_GAS=true && yarn hardhat test",
-    "test-file": "yarn hardhat test --grep Hero",
-    "dev": "yarn webpack-dev-server"
+    "compile": "yarn nx run ethereum-backend:compile",
+    "compile-nx-target-script": "yarn hardhat compile --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "test": "yarn nx run ethereum-backend:test",
+    "test-nx-target-script": "yarn hardhat test --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "test-with-gas-report": "yarn nx run ethereum-backend:test-with-gas-report",
+    "test:gas-report-nx-target-script": "export REPORT_GAS=true && yarn hardhat test --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "start-local-network-nx-target-script": "yarn hardhat node --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "hardhat:node": "yarn nx run ethereum-backend:hardhat:node",
+    
+    "test-file": "yarn hardhat test --grep Hero --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "dev": "yarn webpack-dev-server",
+    "start:react": "nx serve",
+    "build:react": "nx build",
+    "test:react": "nx test",
+    "dev:vanilla": "nx run vanilla-js-app:serve:webpack",
+    "dev:react": "nx run react-app:serve"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
@@ -21,27 +32,66 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nx/cypress": "18.3.0",
+    "@nx/eslint": "18.3.0",
+    "@nx/eslint-plugin": "18.3.0",
+    "@nx/js": "18.3.0",
+    "@nx/react": "18.3.0",
+    "@nx/vite": "18.3.0",
+    "@nx/web": "18.3.0",
+    "@nx/webpack": "^18.3.3",
+    "@nx/workspace": "18.3.0",
+    "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@testing-library/react": "14.0.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
+    "autoprefixer": "10.4.13",
     "chai": "^4.2.0",
+    "cypress": "^13.6.6",
     "dotenv": "^16.4.5",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "ethers": "^6.4.0",
     "hardhat": "^2.22.2",
     "hardhat-gas-reporter": "^2.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "jsdom": "~22.1.0",
+    "nx": "18.3.0",
+    "postcss": "8.4.21",
+    "prettier": "^2.6.2",
     "solidity-coverage": "^0.8.0",
+    "tailwindcss": "3.2.7",
     "ts-loader": "^9.5.1",
     "ts-node": ">=8.0.0",
-    "typechain": "^8.3.2",
-    "typescript": ">=4.5.0",
+    "typechain": "^8.3.0",
+    "typescript": "~5.4.2",
+    "vite": "~5.0.0",
+    "vitest": "^1.3.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "@metamask/detect-provider": "^2.0.0"
+    "@metamask/detect-provider": "^2.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
