--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start-local-network-nx-target-script": "yarn hardhat node --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
     "hardhat:node": "yarn nx run ethereum-backend:hardhat:node",
     "deploy-counter-contract": "yarn hardhat run apps/ethereum-backend/scripts/deployCounter.ts --network localhost --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "deploy-contract": "yarn hardhat run apps/ethereum-backend/scripts/deployStorageExploration.ts --network localhost --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
     "test-file": "yarn hardhat test --grep Hero --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
     "dev": "yarn webpack-dev-server",
     "start:react": "nx serve",
