Add storage sol and add more ethereum projects

--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
   "author": "mydatahack <thon6thon6@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "compile": "yarn nx run ethereum-backend:compile",
-    "compile-nx-target-script": "yarn hardhat compile --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "test": "yarn nx run ethereum-backend:test",
-    "test-nx-target-script": "yarn hardhat test --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "test-with-gas-report": "yarn nx run ethereum-backend:test-with-gas-report",
-    "test:gas-report-nx-target-script": "export REPORT_GAS=true && yarn hardhat test --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "start-local-network-nx-target-script": "yarn hardhat node --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "hardhat:node": "yarn nx run ethereum-backend:hardhat:node",
-    "deploy-counter-contract": "yarn hardhat run apps/ethereum-backend/scripts/deployCounter.ts --network localhost --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "deploy-contract": "yarn hardhat run apps/ethereum-backend/scripts/deployStorageExploration.ts --network localhost --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
-    "test-file": "yarn hardhat test --grep Hero --config apps/ethereum-backend/hardhat.config.ts --tsconfig apps/ethereum-backend/tsconfig.json",
+    "compile": "yarn nx run guess-game:compile",
+    "compile-guess-game": "yarn hardhat compile --config apps/guess-game/hardhat.config.ts --tsconfig apps/guess-game/tsconfig.json",
+    "test": "yarn nx run guess-game:test",
+    "test-guess-game": "yarn hardhat test --config apps/guess-game/hardhat.config.ts --tsconfig apps/guess-game/tsconfig.json",
+    "start-local-network-guess-game": "yarn hardhat node --config apps/guess-game/hardhat.config.ts --tsconfig apps/guess-game/tsconfig.json",
+    "hardhat:node": "yarn nx run guess-game:hardhat:node",
+    "deploy": "yarn hardhat run apps/guess-game/scripts/deployUsingAppStorage.ts --network localhost --config apps/guess-game/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json",
+    "test-file": "yarn hardhat test --grep Hero --config apps/guess-game/hardhat.config.ts --tsconfig apps/guess-game/tsconfig.json",
     "dev": "yarn webpack-dev-server",
     "start:react": "nx serve",
     "build:react": "nx build",
