--- a/apps/guess-game/project.json
+++ b/apps/guess-game/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "ethereum-backend",
+  "name": "guess-game",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "",
@@ -7,25 +7,25 @@
     "compile": {
       "executor": "nx:run-script",
       "options": {
-        "script": "compile-nx-target-script"
+        "script": "compile-guess-game"
       }
     },
     "test": {
       "executor": "nx:run-script",
       "options": {
-        "script": "test-nx-target-script"
+        "script": "test-guess-game"
       }
     },
     "test-with-gas-report": {
       "executor": "nx:run-script",
       "options": {
-        "script": "test:gas-report-nx-target-script"
+        "script": "test:gas-report-guess-game"
       }
     },
     "hardhat:node": {
       "executor": "nx:run-script",
       "options": {
-        "script": "start-local-network-nx-target-script"
+        "script": "start-local-network-guess-game"
       }
     }
   }
