--- a/apps/ethereum-intro/project.json
+++ b/apps/ethereum-intro/project.json
@@ -5,27 +5,39 @@
   "sourceRoot": "",
   "targets": {
     "compile": {
-      "executor": "nx:run-script",
+      "executor": "nx:run-commands",
       "options": {
-        "script": "compile-nx-target-script"
+        "command": "yarn hardhat compile --config apps/ethereum-intro/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json"
       }
     },
     "test": {
-      "executor": "nx:run-script",
+      "executor": "nx:run-commands",
       "options": {
-        "script": "test-nx-target-script"
+        "command": "yarn hardhat test --config apps/ethereum-intro/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json"
+      }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "yarn hardhat run apps/ethereum-intro/scripts/deployUsingAppStorage.ts --network localhost --config apps/ethereum-intro/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json"
+      }
+    },
+    "test-by-grep": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "yarn hardhat test --grep Hero --config apps/ethereum-intro/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json"
       }
     },
     "test-with-gas-report": {
-      "executor": "nx:run-script",
+      "executor": "nx:run-commands",
       "options": {
-        "script": "test:gas-report-nx-target-script"
+        "command": "export REPORT_GAS=true && yarn hardhat test --config apps/ethereum-intro/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json"
       }
     },
     "hardhat:node": {
-      "executor": "nx:run-script",
+      "executor": "nx:run-commands",
       "options": {
-        "script": "start-local-network-nx-target-script"
+        "command": "yarn hardhat node --config apps/ethereum-intro/hardhat.config.ts --tsconfig apps/ethereum-intro/tsconfig.json"
       }
     }
   }
