--- a/package.json
+++ b/package.json
@@ -92,7 +92,10 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@metamask/detect-provider": "^2.0.0",
+    "@mui/material": "^6.1.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
