--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "@mui/material": "^6.1.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router": "^7.0.1"
   }
 }
