Install Wagmi and add config for Alchemy

--- a/apps/react-app/.env.example
+++ b/apps/react-app/.env.example
@@ -2,3 +2,8 @@
 COUNTER_CONTRACT_ADDRESS=
 # Get after deploying the HelloWorld contract
 HELLO_WORLD_CONTRACT_ADDRESS=
+
+# Alchemy API key
+ALCHEMY_API_KEY=
+# Alchemy endpoint
+ALCHEMY_ENDPOINT=
