--- a/package.json
+++ b/package.json
@@ -96,8 +96,11 @@
     "@emotion/styled": "^11.13.5",
     "@metamask/detect-provider": "^2.0.0",
     "@mui/material": "^6.1.9",
+    "@tanstack/react-query": "^5.62.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router": "^7.0.1"
+    "react-router": "^7.0.1",
+    "viem": "2.x",
+    "wagmi": "^2.13.3"
   }
 }
