--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nx/eslint": "18.3.0",
     "@nx/eslint-plugin": "18.3.0",
     "@nx/js": "18.3.0",
+    "@nx/next": "18.3.0",
     "@nx/react": "18.3.0",
     "@nx/vite": "18.3.0",
     "@nx/web": "18.3.0",
@@ -97,6 +98,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "@mui/material": "^6.1.9",
     "@tanstack/react-query": "^5.62.2",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router": "^7.0.1",
